src/components/header/headerMobile.scss
@import "../../assets/css/mixin.scss";

.header-mobile {
	background-color: $color-white;
	padding: 10px;
	text-align: center;
	position: fixed;
	width: 100%;
	z-index: 100;
	top: 0;
	left: 0;
	transition: all 0.3s ease-in-out;
	height: 63px;
	-webkit-transform: translate3d(0, 0, 0);
	-o-transform: translate3d(0, 0, 0);
	transform: translate3d(0, 0, 0);
	-webkit-font-smoothing: antialiased; /* seems to do the same in Safari */

	.nav-button {
		position: absolute;
		top: 5px;
		left: 5px;
		width: 40px;
		height: 50px;
		display: block;
		span {
			height: 5px;
			width: 100%;
			display: block;
			background-color: $color-bg;
			transition: all 0.3s ease-in-out;
			position: absolute;
			&:nth-child(1) {
				top: 50%;
				left: 0;
			}
			&:nth-child(2) {
				top: 50%;
				margin-top: -10px;
				left: 0;
			}
			&:nth-child(3) {
				top: 50%;
				margin-top: 10px;
				left: 0;
			}
		}
		&.opened {
			span {
				&:nth-child(1) {
					opacity: 0;
				}
				&:nth-child(2) {
					margin-top: -3px;
					transform: rotate(45deg);
				}
				&:nth-child(3) {
					margin-top: -3px;
					transform: rotate(-45deg);
				}
			}
		}
	}
	.logo {
		img {
			height: 40px;
		}
	}
	&.nav-up {
		top: -63px;
	}
	.menu-mobile {
		position: fixed;
		width: calc(100% - 60px);
		height: calc(100vh - 63px);
		top: 63px;
		left: -100%;
		z-index: 10;
		border-right: 1px solid $color-border;
		border-bottom: 1px solid $color-border;
		background-color: $color-white;
		padding: 15px;
		transition: all 0.5s ease-in-out;
		&.opened {
			left: 0;
			&::after {
				width: 62px;
			}
		}
		&::after {
			position: absolute;
			z-index: 0;
			content: "";
			width: 0;
			height: 100%;
			background-color: rgba(0, 0, 0, 0.3);
			display: block;
			top: 0;
			left: 100%;
			transition: all 0.15s ease-out;
			transition-delay: 0.4s;
		}
	}
	.search-box {
		background-color: $color-white;
		text-align: left;
		position: relative;
		z-index: 10;
		input {
			height: 35px;
			padding: 0 10px;
			width: calc(100% - 45px);
			@extend .font-medium;
			color: $color-main;
		}
		button {
			height: 35px;
			width: 35px;
			line-height: 35px;
			margin-left: 10px;
			padding: 0;
			text-align: center;
			@extend .font-small;
		}
	}
	.menu-nav {
		padding-top: 10px;
		ul {
			text-align: left;
			li {
				a {
					color: $color-main;
					text-decoration: none;
					padding: 10px;
					display: block;
					border-bottom: 1px solid $color-border;
					@extend .font-medium;
				}
			}
		}
	}
	.select-language {
		padding-top: 15px;
		select {
			width: 100%;
			height: 35px;
			padding: 0 5px;
			outline: none;
			border: 1px solid $color-border;
			border-radius: 5px;
			color: $color-main;
			@extend .font-medium;
		}
	}
}

